# xpmem

./: .gitignore  .travis.yml  .version  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  config.h.in  configure.ac  cray-xpmem.pc.in  dkms.conf  module.in  xpmem-kmod.spec  xpmem-lib.spec
.github/workflows/: ccpp.yml
autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
debian/: .gitignore  changelog  clean  control  copyright  libxpmem-dev.install  libxpmem0.install  libxpmem0.symbols  rules
debian/upstream/: metadata
include/: Makefile.am  xpmem.h
kernel/: Kbuild.in  Makefile.am  xpmem.in  xpmem_attach.c  xpmem_get.c  xpmem_main.c  xpmem_make.c  xpmem_misc.c  xpmem_mmu_notifier.c  xpmem_pfn.c  xpmem_private.h
lib/: Makefile.am  cray-xpmem.conf.in  libxpmem.c
m4/: ac_path_kernel_source.m4
test/: Makefile.am  run.sh  run.sh.in  run.sh.in~  xpmem_master.c  xpmem_proc1.c  xpmem_proc2.c
test/include/: xpmem_test.h
